lab-templates/controllers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  rules:
  - host: front.myapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port: 
              number: 80
  - host: backend.myapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 8080
